--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -36,14 +36,20 @@ resolver:
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 #autobind:
-#  - "github.com/your/app/graph/model"
+#  - "./graph/model"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
 # The first line in each type will be used as defaults for resolver arguments and
 # modelgen, the others will be allowed when binding to fields. Configure them to
 # your liking
-#models:
+models:
+  Message:
+    model: ./graph/model.Message
+    fields:
+      timestamp:
+        resolver: true
+      
 #  ID:
 #    model:
 #      - github.com/99designs/gqlgen/graphql.ID
